Atualizações de pagina
Modifiquei algumas paginas e adicionei o htaccess para o apache interpretar direito as urls

--- a/WebPage/css/style.css
+++ b/WebPage/css/style.css
@@ -10,6 +10,20 @@ body {
   overflow-x: hidden;
 }
 
+.download-session{
+    text-align: center;
+}
+
+
+.download-session div button{
+    font-size: 2rem;
+}
+
+.download-session div img{
+    width: 40rem;
+    height: 30rem;
+}
+
 .layout_padding {
   padding: 90px 0;
 }
