--- a/WebPage/css/responsive.css
+++ b/WebPage/css/responsive.css
@@ -1,12 +1,32 @@
+@media (max-width: 1366px) {
+    .navbar-nav {
+        align-items: center;
+    }
+    .navbar-nav {
+        padding-left: 15%;
+    }
+    .custom_nav-container .navbar-nav .nav-item .nav-link {
+        padding: 10px 20px;
+    }
+  }
+
 @media (max-width: 1200px) {
   .carousel_btn-box {
     display: flex;
     justify-content: center;
     margin-top: 45px;
   }
+  .navbar-nav {
+    padding-left: 10.5%;
+    }
+
 }
 
-@media (max-width: 1120px) {}
+@media (max-width: 1145px) {
+    .navbar-nav {
+        padding-left: 6%;
+    }
+}
 
 @media (max-width: 992px) {
   .hero_area {
@@ -30,10 +50,26 @@
     padding: 30px 0;
   }
 
+  .navbar-collapse h1{
+    text-align: center;
+    position: relative;
+    bottom: 50px;
+  }
+
+  .navbar-nav {
+    padding-left: 0%;
+    position: relative;
+    bottom: 35px;
+   }
+
   .search_form {
     margin: 0;
     justify-content: center;
     margin-top: 15px;
+  }
+
+  .slider_section .carousel_btn_box {
+    left: 42%;
   }
 }
 
@@ -41,6 +77,14 @@
   .about_section .img-box {
     margin-top: 45px;
   }
+  .download-session div button{
+    font-size: 1rem;
+    }
+
+    .download-session div img{
+        width: 30rem;
+        height: 20rem;
+    }
 }
 
 @media (max-width: 576px) {
@@ -48,6 +92,10 @@
     margin: 0;
     font-size: 14px;
   }
+  .download-session div img{
+    width: 15rem;
+    height: 10rem;
+}
 }
 
 @media (max-width: 480px) {
@@ -69,6 +117,10 @@
   .slider_section .detail-box h1 {
     font-size: 2rem;
   }
+  .download-session div img{
+    width: 10rem;
+    height: 5rem;
+    }
 }
 
 @media (max-width: 376px) {
